Modified application for CUBA 7 and the latest GAE SDK version

--- a/modules/web/src/com/company/gaef/web/messages.properties
+++ b/modules/web/src/com/company/gaef/web/messages.properties
@@ -6,4 +6,5 @@ loginWindow.welcomeLabel = Welcome to CUBA!
 loginWindow.logoImage = branding/app-icon-login.png
 
 menu-config.application-gaef = Application
-menu-config.gaef$Book.browse = Books
+menu_config.gaef$Book.browse=Books
+
